@@ -1,3 +1,8 @@
+2004-12-31  Al Riddoch  <alriddoch@zepler.org>
+
+	* skstream.spec.in: Update spec with License URL Package Vendor
+	  and Distribution tags.
+
 2004-12-06  Al Riddoch  <alriddoch@zepler.org>
 
 	* skstream/skstream.cpp, skstream/skserver.cpp: Fix an issue with
